src/test/ui/issues/issue-43623.stderr
error[E0631]: type mismatch in function arguments
  --> $DIR/issue-43623.rs:16:5
   |
LL | pub fn break_me<T, F>(f: F)
   |        -------- required by a bound in this
...
LL |     F: for<'b> FnMut(<T as Trait<'b>>::Assoc),
   |                ------------------------------ required by this bound in `break_me`
LL | {
LL |     break_me::<Type, fn(_)>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected signature of `fn(<Type as Trait<'b>>::Assoc) -> _`
   |     found signature of `fn(()) -> _`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0631`.
